k8s/apps/middleware.yaml
# Middleware Configuration

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: infra
spec:
  stripPrefix:
    prefixes:
      - /api
